<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/img_2801"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:id="@+id/score_text"
            android:textColor="@color/teal_200"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_alignParentRight="true"
            android:text="@string/_0"
            android:textSize="20sp"
            android:textColor="@color/teal_200"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:padding="8dp"
        android:text="@string/thank_you_for_playing"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>

